# backcrdt

./: AGENTS.md  Cargo.toml  README.md  agents.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
python/backcrdt/: __init__.py  array.py  base.py  doc.py  map.py  multi_doc.py  text.py  transaction.py
src/: lib_backcrdt.rs
tests/: conftest.py  test_array.py  test_doc.py  test_map.py  test_multi_doc.py  test_pycrdt.py  test_text.py
