[package]
name = "backcrdt"
version = "0.1.0"
edition = "2024"

[lib]
name = "backcrdt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.3"
thiserror = "2.0"
bytes = "1.10"
bitflags = { version = "2.9", features = ["serde"] }
zerocopy = { version = "0.8", features = ["derive", "simd"] }
lmdb-master-sys = { version = "0.2" }
smallvec = { version = "1.15", features = ["const_generics", "const_new", "union", "write"] }
serde = { version = "1.0", features = ["rc", "alloc", "derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
twox-hash = "2.1.0"
simple-base64 = "0.23.2"
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }
genawaiter2 = "0.100.1"
