[build-system]
requires = ["maturin>=1.8.2,<2"]
build-backend = "maturin"

[project]
name = "backcrdt"
dynamic = ["version"]
description = "BackCRDT"
license = { file = "LICENSE" }
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
readme = "README.md"
keywords = [
  "crdt",
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
  "typing_extensions >=4.15.0,<5.0.0; python_version<'3.11'",
  "pycrdt >=0.14.1,<0.15.0"
]

[dependency-groups]
test = [
  "coverage >=7.14.1,<8.0.0",
  "mypy >=2.1.0,<3.0.0",
  "pytest >=9.0.3,<10",
]

[project.urls]
Homepage = "https://github.com/davidbrochart/backcrdt"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "backcrdt._backcrdt"
